fix(pagecontent): removed overflow hidden from pagecontent component

--- a/app/client/stylesheets/components/pu-page.sass
+++ b/app/client/stylesheets/components/pu-page.sass
@@ -52,7 +52,8 @@
 
     .pu-sub-pagecontent
         padding: 50px 0
-        overflow: hidden
+        // overflow: hidden
+        height: 100%
 
         &-large
             padding-top: 92px
